--- a/views/results.erb
+++ b/views/results.erb
@@ -4,6 +4,6 @@
 
 <h2>Vowels: <%= @analyzed_text.count_of_vowels %></h2>
 
-<h2>Consonants: <%= @analyized_text.count_of_consonants %></h2>
+<h2>Consonants: <%= @analyzed_text.count_of_consonants %></h2>
 
 <h2>Most Common Letter: <%= @analyzed_text.most_used_letter.first.upcase %> used <%= anaylized_text.most_used_letter.values.first %> times</h2>
